# LiDAR-Tracking

./: CMakeLists.txt  README.md  absolute_speed.py  package.xml
config/: adaptive_param.yaml  params.yaml  patchworkpp_hesai.yaml  patchworkpp_hesai_continue.yaml  patchworkpp_hesai_origin.yaml  patchworkpp_origin.yaml  patchworkpp_ouster.yaml
include/: params.h  utils.hpp
include/cloud_processor/: cloud_processor.hpp  cloud_processor_origin.hpp
include/cloud_segmentation/: cloud_segmentation.hpp
include/depth_clustering/: depth_cluster.h
include/lshape/: lshaped_fitting.h
include/patchworkpp/: patchworkpp.hpp  utils.hpp
include/point_type/: hesai_point.h
include/track/: HungarianAlg.h  track.h
include/tracking/: tracking.hpp
include/undistortion/data_process/: data_process.h
launch/: demo.launch
map/: convert_json.py  kiapi.json  solchan.csv  solchan.json
rviz/: hesai.rviz  ouster.rviz
src/: cloud_segmentation.cpp  cloud_segmentation_origin.cpp  tracking.cpp  tracking_origin.cpp
src/lib/: CMakeLists.txt  HungarianAlg.cpp  data_process.cpp  depth_clustering.cpp  gyr_int.cpp  lshaped_fitting.cpp  track.cpp
time_log/cloud_segmentation/: average.txt  clustering.txt  crop.txt  downsampling.txt  lshape.txt  removalground.txt  undistortion.txt
time_log/tracking/: average.txt  correction.txt  crophdmap.txt  integration.txt  tracking.txt  transform.txt
